# fastapi_factory

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  config.py  docker-entrypoint.sh  main.py  pyproject.toml  run.py
migration/: README.md  env.py
migration/versions/: 13be713c8d83_update_table_message.py  22ae32024dbc_add_table_participent_and_remove_thread.py  3a93bc1a7bd0_init_db.py  599a67b9b342_init_model_for_webmail.py  78f01144378d_add_thread_model.py  7ca445411790_add_md5_message_id_and_in_reply_to.py  c1d758017637_add_models_storage.py  ef9c074efc48_create_table_account.py
src/: __init__.py
src/api/: __init__.py  base.py
src/bases/api/: __init__.py  auth_handler.py  factory.py  method_handler.py  resource.py  router.py
src/bases/celery/: generator.py  task.py
src/bases/core/: __init__.py
src/bases/error/: api.py  base.py  client.py  core.py  service.py
src/bases/logic/: __init__.py
src/bases/model/: __init__.py
src/bases/request_handler/: __init__.py
src/bases/schema/: __init__.py  fields.py  validate.py
src/bases/service/: __init__.py
src/clients/imap/: __init__.py
src/common/: constants.py  context.py  dict_utils.py  json_encoders.py  logging.py  utils.py
src/common/constants/: imap.py
src/databases/: __init__.py
src/databases/postgres/: __init__.py
src/logic/account/: __init__.py
src/logic/sync/: __init__.py
src/logic/verification/: __init__.py
src/models/: __init__.py
src/models/postgres/: __init__.py  account.py  folder.py  message.py  participant.py  seive.py  (+5 more)
src/workers/: __init__.py  scheduler.py  sender.py
(+15 files in other folders)
