[tool.poetry]
name = "webmail"
version = "0.0.1"
description = ""
authors = ["LoiND"]

[tool.poetry.dependencies]
python = "3.10.0"
pyjwt = "1.7.1"
cryptography = "^35.0.0"
python-slugify = "^5.0.2"

requests = "2.24.0"
redis = "^4.1.2"

click = "^8.0.3"
sentry-sdk = {extras = ["flask"], version = "^1.4.3"}

SQLAlchemy = "1.4.35"
alembic = "1.7.5"
ipython = "^7.29.0"
celery = "^5.2.3"
PyYAML = "^6.0"
semantic-version = "^2.9.0"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
fastapi-utils = "^0.2.1"
importlib-resources = "^5.6.0"
zipp = "^3.8.0"
importlib-metadata = "^4.11.3"
asyncpg = "0.25.0"
psycopg2-binary = "2.9.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
